tests/ui/pass/pat_simple.rs
#![allow(unused)]

#[expandable::pat]
macro_rules! test {
    ($p:pat) => {
        $p
    };
}

fn main() {}
