tests/ui/fail/bad_range_pattern.rs
#![allow(unused)]

#[expandable::expr]
macro_rules! t {
    ($p:pat) => {{
        let $p..=0 = ();
    }};
}

fn main() {}
